--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/main.css">
 
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
@@ -20,37 +19,20 @@
     <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Project name</a>
-    </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <form class="navbar-form navbar-right" role="form">
-      <div class="form-group">
-        <input type="text" placeholder="Email" class="form-control">
-      </div>
-      <div class="form-group">
-        <input type="password" placeholder="Password" class="form-control">
-      </div>
-      <button type="submit" class="btn btn-success">Sign in</button>
-      </form>
-    </div><!--/.navbar-collapse -->
-    </div>
-  </nav>
 
-  <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="jumbotron">
     <div class="container">
-    <h1>Hello, world!</h1>
-    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+    <h1>Treehouse to Linkedin</h1>
+    <p>Showcase your accomplishments from Treehouse on LinkedIn</p>
+    <form id="username-form">
+      <div class="form-group">
+        <label for="username">Your Treehouse Username</label>
+        <input type="text" id="username" class="form-control" placeholder="Your Treehouse Username">
+      </div>
+      <div class="form-group">
+        <button id="search-username" class="btn btn-primary btn-lg" >Go &raquo;</button>
+      </div>
+    </form>
     </div>
   </div>
 
@@ -58,32 +40,59 @@
     <!-- Example row of columns -->
     <div class="row">
     <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-     </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      <h2>Select the badge you want</h2>
+      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
     </div>
     </div>
+
+<!-- 
+    Treehouse idea: One click, add your badges to LinkedIn
+
+    https://www.crystalknows.com/profiles?id=15160
+
+    http://teamtreehouse.com/kortaggio.json
+    http://reportcard.rileyh.com/instructions.html
+
+
+
+  Step 1: Enter your treehouse username
+  Step 1.2: Fetch JSON information and parse it
+  Step 1.3: Search to see if the user has completed any tracks.
+  Step 1.9: Return "It looks like you haven't completed any tracks yet. Want to add your work in progress badges instead?"
+  Step 2: Select the completed tracks you want to showcase.
+  Step 3: Add these tracks to linkedin.
+
+    https://www.linkedin.com/profile/add?_ed=0_7nTFLiuDkkQkdELSpruCwI3eGOWS9kTguPfeqlj5kgb0SLpi97XL5H3ygTHZ0a1-aSgvthvZk7wTBMS3S-m0L6A6mLjErM6PJiwMkk6nYZylU7__75hCVwJdOTZCAkdv&pfCertificationName=Foo&pfCertificationUrl=http%3A%2F%2Fwww.example.com&pfLicenseNo=1234&pfCertStartDate=201501&pfCertFuture=201602&trk=onsite_longurl
+
+
+    <div><a href="https://www.linkedin.com/profile/add?_ed=0_7nTFLiuDkkQkdELSpruCwI3eGOWS9kTguPfeqlj5kgb0SLpi97XL5H3ygTHZ0a1-aSgvthvZk7wTBMS3S-m0L6A6mLjErM6PJiwMkk6nYZylU7__75hCVwJdOTZCAkdv&pfCertificationName=Foo&pfCertificationUrl=http%3A%2F%2Fwww.example.com&pfLicenseNo=1234&pfCertStartDate=201501&pfCertFuture=201602&trk=onsite_html" rel="nofollow" target="_blank"><img src="https://download.linkedin.com/desktop/add2profile/buttons/en_US.png" alt="LinkedIn Add to Profile button"></a></div>
+ -->
 
     <hr>
 
     <footer>
-    <p>&copy; Company 2015</p>
+      <p>Created by <a href="http://www.kortaggio.com">Bill Mei</a>. This website is not affiliated with Treehouse or Treehouse Island, Inc.</p>
     </footer>
-  </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+  </div> <!-- /container -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+  <script src="js/vendor/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
 
-    <script src="js/vendor/bootstrap.min.js"></script>
+  <div id="alert-modal" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 id="alert-modal-title" class="modal-title"></h4>
+        </div>
+        <div id="alert-modal-body" class="modal-body"></div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <script src="js/main.js"></script>
   </body>
 </html>
