Build LinkedIn Share URL

--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
     https://www.linkedin.com/profile/add?_ed=0_7nTFLiuDkkQkdELSpruCwI3eGOWS9kTguPfeqlj5kgb0SLpi97XL5H3ygTHZ0a1-aSgvthvZk7wTBMS3S-m0L6A6mLjErM6PJiwMkk6nYZylU7__75hCVwJdOTZCAkdv&pfCertificationName=Foo&pfCertificationUrl=http%3A%2F%2Fwww.example.com&pfLicenseNo=1234&pfCertStartDate=201501&pfCertFuture=201602&trk=onsite_longurl
 
 
-    <div><a href="https://www.linkedin.com/profile/add?_ed=0_7nTFLiuDkkQkdELSpruCwI3eGOWS9kTguPfeqlj5kgb0SLpi97XL5H3ygTHZ0a1-aSgvthvZk7wTBMS3S-m0L6A6mLjErM6PJiwMkk6nYZylU7__75hCVwJdOTZCAkdv&pfCertificationName=Foo&pfCertificationUrl=http%3A%2F%2Fwww.example.com&pfLicenseNo=1234&pfCertStartDate=201501&pfCertFuture=201602&trk=onsite_html" rel="nofollow" target="_blank"><img src="https://download.linkedin.com/desktop/add2profile/buttons/en_US.png" alt="LinkedIn Add to Profile button"></a></div>
+    <div><a href="https://www.linkedin.com/profile/add?_ed=0_7nTFLiuDkkQkdELSpruCwI3eGOWS9kTguPfeqlj5kgb0SLpi97XL5H3ygTHZ0a1-aSgvthvZk7wTBMS3S-m0L6A6mLjErM6PJiwMkk6nYZylU7__75hCVwJdOTZCAkdv
+
+    &pfCertificationName=Foo
+    &pfCertificationUrl=http%3A%2F%2Fwww.example.com
+    &pfLicenseNo=1234
+    &pfCertStartDate=201501
+    &pfCertFuture=201602
+
+    &trk=onsite_html" rel="nofollow" target="_blank"><img src="https://download.linkedin.com/desktop/add2profile/buttons/en_US.png" alt="LinkedIn Add to Profile button"></a></div>
  -->
 
     <hr>
