--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
   </div>
 
   <div class="container">
-    <div class="row">
+    <div class="row result-list">
       <div class="col-xs-12">
-        <h2>Select the badge you want</h2>
+        <h2>Select the badge you want:</h2>
         <div id="badges-list"></div>
+        <hr>
       </div>
     </div>
-
-    <hr>
 
     <footer>
       <p>Created by <a href="http://www.kortaggio.com">Bill Mei</a>. This website is not affiliated with Treehouse or Treehouse Island, Inc.</p>
