Adjust CSS for list items and hide animation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="row result-list">
       <div class="col-xs-12">
         <h2>Select the badge you want:</h2>
-        <div id="badges-list"></div>
+        <ul id="badges-list"></ul>
         <hr>
       </div>
     </div>
