Loading spinner and other css tweaks

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
 
   </head>
@@ -26,6 +27,7 @@
         <input type="text" id="username" class="form-control" placeholder="Your Treehouse Username">
       </div>
       <div class="form-group">
+        <i class="fa fa-spin fa-spinner fa-lg loading-spinner"></i>
         <button id="search-username" class="btn btn-info" >Export Data &raquo;</button>
       </div>
     </form>
