Favicon and disclaimer

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Treehouse to LinkedIn: Easily add your completed courses from Treehouse to LinkedIn</title>
-    <meta name="description" content="">
+    <meta name="description" content="Treehouse to LinkedIn: Easily add your completed courses from Treehouse to LinkedIn">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="icon" href="/static/img/favicon.ico">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -44,7 +46,7 @@
     </div>
 
     <footer>
-      <p>Created by <a href="http://www.kortaggio.com">Bill Mei</a>. This website is not affiliated with Treehouse or Treehouse Island, Inc.</p>
+      <p>Created by <a href="http://www.kortaggio.com">Bill Mei</a>. This website is not affiliated with Treehouse Island Inc. or LinkedIn Corporation.</p>
     </footer>
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
