--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Treehouse to LinkedIn: Easily add your completed courses from Treehouse to LinkedIn">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" href="/static/img/favicon.ico">
+    <link rel="icon" href="img/favicon.ico">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
