--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <footer>
-      <p>Created by <a href="http://www.kortaggio.com">Bill Mei</a>. This website is not affiliated with Treehouse Island Inc. or LinkedIn Corporation.</p>
+      <p>Created by <a href="https://billmei.net">Bill Mei</a>. This website is not affiliated with Treehouse Island Inc. or LinkedIn Corporation.</p>
     </footer>
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
